--- a/BoardGameChooser.csproj
+++ b/BoardGameChooser.csproj
@@ -51,10 +51,22 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmBoardGame.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBoardGame.Designer.cs">
+      <DependentUpon>frmBoardGame.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyComparer.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="SortableBindingList.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBoardGame.resx">
+      <DependentUpon>frmBoardGame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
