--- a/BoardGameChooser.csproj
+++ b/BoardGameChooser.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="BGGInterface.cs" />
     <Compile Include="BoardGame.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +67,12 @@
     <Compile Include="frmBoardGame.Designer.cs">
       <DependentUpon>frmBoardGame.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmScrape.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmScrape.Designer.cs">
+      <DependentUpon>frmScrape.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyComparer.cs" />
@@ -76,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmBoardGame.resx">
       <DependentUpon>frmBoardGame.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmScrape.resx">
+      <DependentUpon>frmScrape.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
